# Widex

./: .gitignore  WIDEX_CUSTOM.md  sync-upstream.sh
.codex/skills/widwex-upstream-update-workflow/: SKILL.md
.github/workflows/: rust-release-argument-comment-lint.yml  rust-release-windows.yml  rust-release-zsh.yml  rust-release.yml  widex-npm-artifacts.yml
codex-cli/: README.md  package.json
codex-cli/scripts/: README.md  build_container.sh  build_npm_package.py  install_native_deps.py
codex-rs/: Cargo.toml
codex-rs/api-switchover/: Cargo.toml
codex-rs/api-switchover/src/: lib.rs  main.rs
codex-rs/app-server/src/: codex_message_processor.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs  marketplace_cmd.rs  mcp_cmd.rs
codex-rs/codex-api/src/: lib.rs
codex-rs/codex-client/src/: transport.rs
codex-rs/core/: Cargo.toml  config.schema.json  gemini_prompt.md
codex-rs/core/src/: agent_identity.rs  arc_monitor_tests.rs  auth.rs  client.rs  client_common_tests.rs  codex.rs  codex_tests.rs  gemini.rs  lib.rs  mcp_tool_call_tests.rs  model_provider_info.rs  shell_snapshot.rs  stream_events_utils_tests.rs  thread_manager.rs  thread_manager_tests.rs  thread_rollout_truncation_tests.rs  turn_timing_tests.rs  unavailable_tool.rs
codex-rs/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs  responses_headers.rs
codex-rs/ralph-widex/: Cargo.toml
codex-rs/ralph-widex/src/: circuit_breaker.rs  lib.rs  loop_runner.rs  monitor.rs  ralph_status.rs  ralph_storage.rs  response_analysis.rs  widex_overlay.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  (+14 more)
codex-rs/tui2/: Cargo.toml
docs/: widex-upstream-release-playbook.md
scripts/: stage_npm_packages.py
widex-custom/: AGENTS.md  CLAUDE.md  README.md
widex-custom/docs/: BRANCH_GUIDE.md  DUAL_CLI.md  GEMINI_INTEGRATION_PROGRESS.md  GEMINI_STATUS_SUMMARY.md  MERGE_CONFLICT_GUIDE.md  WIDEX_CUSTOM.md  npm-release.md  update-widex.md
widex-custom/models/: README.md
(+162 files in other folders)
