[package]
name = "codex-api-switchover"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
codex-core = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
